[fix] - solving the issue with storing a new trip